--- a/app/src/main/res/layout/activity_data__input__portofolio.xml
+++ b/app/src/main/res/layout/activity_data__input__portofolio.xml
@@ -3,10 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    tools:context=".Orangtua.Portofolio">
-
+    android:layout_height="match_parent"
+    tools:context=".Admin.Data_Input_Portofolio">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -42,19 +40,24 @@
                 android:layout_marginRight="13dp"
                 android:layout_marginLeft="13dp">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclePortofolio_read"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
-                tools:listitem="@layout/item_tema_portofolio_read"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclePortofolio"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="10dp"
+                    tools:listitem="@layout/item_tema_portofolio"/>
 
             </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
         </RelativeLayout>
     </LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@android:drawable/ic_input_add" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-
-
