--- a/app/src/main/res/layout/activity_kalender.xml
+++ b/app/src/main/res/layout/activity_kalender.xml
@@ -10,9 +10,24 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".Kalender">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbark"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="72dp">
 
         <LinearLayout
             android:layout_width="match_parent"
