--- a/app/src/main/res/layout/activity_akun_profile.xml
+++ b/app/src/main/res/layout/activity_akun_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="2"
-    tools:context=".Orangtua.ProfilUser">
+    tools:context=".Orangtua.Akun_Profile">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -14,6 +14,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
         android:orientation="vertical"
         android:layout_weight="0">
         <RelativeLayout
@@ -27,38 +28,38 @@
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="35dp"
-                android:src="@drawable/foto"
+                android:src="@drawable/ic_account_circle_black_24dp"
                 app:civ_border_color="@color/colorPrimary"
                 app:civ_border_width="6dp"
                 app:civ_shadow="true"
                 app:civ_shadow_color="@color/graylight"
                 app:civ_shadow_radius="10" />
+
             <TextView
-                android:id="@+id/namauser"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="25dp"
+                android:id="@+id/username_profil"
                 android:layout_centerHorizontal="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/fotoprofil"
-                android:text="Dhea Melyadinata"
+                android:layout_marginTop="240dp"
+                android:layout_marginBottom="20dp"
+                android:text="Username"
                 android:textColor="@color/graylight"
-                android:textStyle="bold"
-                android:textSize="20sp"/>
+                android:textSize="18sp"/>
+
         </RelativeLayout>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="315dp"
         android:layout_weight="2">
             <LinearLayout
                 android:layout_width="360dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp">
+                android:layout_marginTop="35dp">
                 <LinearLayout
                     android:paddingLeft="25dp"
                     android:layout_width="match_parent"
@@ -66,8 +67,9 @@
                     <ImageView
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:src="@drawable/ic_person_black_24dp" />
+                        android:src="@drawable/ic_email_profildp" />
                     <TextView
+                        android:id="@+id/email"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingLeft="20dp"
@@ -75,17 +77,19 @@
                         android:textStyle="bold"
                         android:textColor="@color/colorPrimary"
                         android:textSize="16sp"
-                        android:text="Komunitas HEbAT Situbondo"/>
+                        android:text="dmelyadinata@gmail.com"/>
                 </LinearLayout>
                 <LinearLayout
                     android:paddingLeft="25dp"
+                    android:layout_marginTop="8dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <ImageView
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:src="@drawable/ic_place_black_24dp" />
+                        android:src="@drawable/ic_phone_android_profil_24dp" />
                     <TextView
+                        android:id="@+id/no_handphone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingLeft="20dp"
@@ -93,17 +97,39 @@
                         android:textStyle="bold"
                         android:textColor="@color/colorPrimary"
                         android:textSize="16sp"
-                        android:text="Palraman, Dawuhan, Kec.Situbondo, Kabupaten Situbondo, Jawa Timur 68311"/>
+                        android:text="085204XXXXXX"/>
                 </LinearLayout>
                 <LinearLayout
+                    android:paddingLeft="25dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/ic_supervisor_account_black_24dp" />
+                    <TextView
+                        android:id="@+id/status_profile"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="20dp"
+                        android:layout_gravity="center_vertical"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="16sp"
+                        android:text="Anggota"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_marginTop="8dp"
                     android:paddingLeft="25dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <ImageView
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:src="@drawable/ic_phone_android_black_24dp" />
+                        android:src="@drawable/ic_edit_black_24dp" />
                     <TextView
+                        android:id="@+id/updateuser"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingLeft="20dp"
@@ -111,43 +137,41 @@
                         android:textStyle="bold"
                         android:textColor="@color/colorPrimary"
                         android:textSize="16sp"
-                        android:text="085336119737"/>
+                        android:text="Update User"/>
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="8dp"
                     android:paddingLeft="25dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:src="@drawable/ic_public_black_24dp" />
-                    <TextView
+                    <Button
+                        android:id="@+id/btnlogout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="20dp"
-                        android:layout_gravity="center_vertical"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="16sp"
-                        android:text="giathomeeducation.heliohost.org"/>
+                        android:layout_marginTop="12dp"
+                        style="@style/logoutButton"
+                        android:drawableLeft="@drawable/ic_call_missed_outgoing_black_24dp"
+                        android:text="Logout"
+                        android:textAllCaps="false"
+                        android:textColor="#fff"
+                        android:textSize="16sp" />
                 </LinearLayout>
             </LinearLayout>
     </LinearLayout>
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_navigation"
-        android:animateLayoutChanges="true">
-    </FrameLayout>
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay">
 
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_navigation"
-        android:background="?android:attr/windowBackground"/>
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbarakun"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+
     </RelativeLayout>
 </LinearLayout>
