--- a/app/src/main/res/layout/activity_dokumentasi_kegiatan.xml
+++ b/app/src/main/res/layout/activity_dokumentasi_kegiatan.xml
@@ -4,29 +4,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Orangtua.DokumentasiKegiatan">
+    tools:context=".Orangtua.Dokumentasi_Kegiatan">
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar4"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/title_dokumentasi_kegiatan" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_marginTop="70dp"
-            android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="135dp"
+        android:orientation="vertical"
+        android:padding="8dp">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycleDokumentasi"
+
+            <!--<GridView-->
+                <!--android:id="@+id/recycleDokumentasi_read"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:columnWidth="150dp"-->
+                <!--android:numColumns="auto_fit"-->
+                <!--android:gravity="center|bottom"-->
+                <!--android:verticalSpacing="10dp"-->
+                <!--android:horizontalSpacing="10dp"-->
+                <!--tools:listitem="@layout/item_dokumentasi_kegiatan_read">-->
+            <!--</GridView>-->
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycleDokumentasi_read"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
-                tools:listitem="@layout/item_dokumentasi_kegiatan"/>
+                android:layout_height="match_parent"
+                tools:listitem="@layout/item_dokumentasi_kegiatan_read"/>
 
-        </RelativeLayout>
     </LinearLayout>
 
 </RelativeLayout>
