--- a/app/src/main/res/layout/activity_jurnal_kegiatan.xml
+++ b/app/src/main/res/layout/activity_jurnal_kegiatan.xml
@@ -5,7 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".Orangtua.JurnalKegiatan">
+    tools:context=".Orangtua.Jurnal_Kegiatan">
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar3"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/title_jurnal_kegiatan" />
 
@@ -15,10 +29,10 @@
         android:orientation="vertical">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="135dp"
             android:layout_height="match_parent">
 
-            <android.support.v7.widget.RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycleJKegiatan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
