--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/baground"
     tools:context=".Login">
 
     <RelativeLayout
@@ -25,28 +24,28 @@
             android:orientation="vertical"
             android:paddingTop="20dp">
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/editUsername"
+                    android:id="@+id/usernameBox"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_person_24dp"
                     android:hint="Username"
                     android:textSize="14dp"
                     android:inputType="textPersonName"
-                    android:textColor="#FFFFFF"
+                    android:textColor="#000000"
                     android:textColorHint="#FFFFFF" />
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/editTextPassword"
+                    android:id="@+id/passwordBox"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -54,9 +53,9 @@
                     android:hint="Password"
                     android:textSize="14dp"
                     android:inputType="textPassword"
-                    android:textColor="#FFFFFF"
+                    android:textColor="#000000"
                     android:textColorHint="#FFFFFF" />
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/btnsignin"
@@ -86,8 +85,7 @@
                 android:text="Register"
                 android:textAllCaps="false"
                 android:textColor="#fff"
-                android:textSize="18sp"
-                android:onClick="Daftar"/>
+                android:textSize="18sp" />
 
         </LinearLayout>
     </RelativeLayout>
