--- a/app/src/main/res/layout/activity_registrasi.xml
+++ b/app/src/main/res/layout/activity_registrasi.xml
@@ -24,28 +24,28 @@
             android:orientation="vertical"
             android:paddingTop="30dp">
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/editUsername"
+                    android:id="@+id/usernameBox"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_person_24dp"
                     android:hint="Username"
                     android:textSize="14dp"
                     android:inputType="textPersonName"
-                    android:textColor="#FFFFFF"
+                    android:textColor="#000000"
                     android:textColorHint="#FFFFFF" />
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/editTextPassword"
+                    android:id="@+id/passwordBox"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -53,25 +53,41 @@
                     android:hint="Password"
                     android:textSize="14dp"
                     android:inputType="textPassword"
-                    android:textColor="#FFFFFF"
+                    android:textColor="#000000"
                     android:textColorHint="#FFFFFF" />
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
+            </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/editTextEmail"
+                    android:id="@+id/emailBox"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
                     android:drawableLeft="@drawable/ic_email_black_24dp"
-                    android:hint="E-mail"
+                    android:hint="Email"
                     android:textSize="14dp"
                     android:inputType="textEmailAddress"
-                    android:textColor="#FFFFFF"
+                    android:textColor="#000000"
                     android:textColorHint="#FFFFFF" />
-            </android.support.design.widget.TextInputLayout>
+            </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/no_handphoneBox"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:drawableLeft="@drawable/ic_phone_android_black_24dp"
+                    android:hint="No. Handphone"
+                    android:inputType="phone"
+                    android:textSize="14dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#FFFFFF" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/btnsignup"
@@ -82,8 +98,7 @@
                 android:text="Register"
                 android:textAllCaps="false"
                 android:textColor="#fff"
-                android:textSize="18sp"
-                android:onClick="Register"/>
+                android:textSize="18sp"/>
 
         </LinearLayout>
     </RelativeLayout>
