--- a/app/src/main/res/layout/item_agenda_kegiatan.xml
+++ b/app/src/main/res/layout/item_agenda_kegiatan.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp">
@@ -24,8 +24,8 @@
 
             <ImageView
                 android:id="@+id/imgKegiatan"
-                android:layout_width="190dp"
-                android:layout_height="95dp"
+                android:layout_width="150dp"
+                android:layout_height="200dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
@@ -33,15 +33,6 @@
                 android:layout_weight="1"
                 app:srcCompat="@drawable/kegiatan1" />
 
-            <TextView
-                android:id="@+id/tvJudulKegiatan"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginBottom="10dp"
-                android:textSize="14dp"
-                android:textStyle="bold"
-                android:text="TextView"/>
         </LinearLayout>
 
             <LinearLayout
@@ -49,19 +40,74 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:layout_marginTop="65dp"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tvJenis_Kegiatan"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:textColor="#000000"
+                    android:text="TextView"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvNama_Kegiatan"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000000"
+                    android:textSize="14dp"
+                    android:text="TextView" />
+                <TextView
+                    android:id="@+id/tvWaktu_Kegiatan"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000000"
+                    android:textSize="14dp"
+                    android:text="TextView" />
+                <TextView
+                    android:id="@+id/tvTanggal_Kegiatan"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000000"
+                    android:textSize="14dp"
+                    android:text="TextView" />
+                <TextView
+                    android:id="@+id/tvTempat"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000000"
+                    android:textSize="14dp"
+                    android:text="TextView" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
                 <Button
-                    android:id="@+id/btn_set_detail"
+                    android:id="@+id/btn_set_update"
                     style="@style/Widget.AppCompat.Button.Colored"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"
+                    android:layout_marginTop="15dp"
                     android:layout_weight="1"
-                    android:text="Lihat"
+                    android:text="Edit"
                     android:textSize="12sp" />
+                <Button
+                    android:id="@+id/btn_set_delete"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:layout_weight="1"
+                    android:text="Hapus"
+                    android:textSize="12sp" />
+                </LinearLayout>
             </LinearLayout>
-
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
