--- a/app/src/main/res/layout/item_dokumentasi_kegiatan.xml
+++ b/app/src/main/res/layout/item_dokumentasi_kegiatan.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp">
@@ -17,32 +17,67 @@
             android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorCard"
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imgKegiatan"
-                android:layout_width="190dp"
-                android:layout_height="95dp"
-                android:layout_marginLeft="10dp"
+                android:id="@+id/imgKegiatan_Dokumentasi"
+                android:layout_width="250dp"
+                android:layout_height="195dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
+                android:layout_gravity="center_horizontal"
                 app:srcCompat="@drawable/kegiatan1" />
 
             <TextView
-                android:id="@+id/tvJudulKegiatan"
+                android:id="@+id/tvKegiatan_dokumentasi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginBottom="10dp"
-                android:textSize="14dp"
+                android:gravity="center"
+                android:textSize="16dp"
                 android:textStyle="bold"
                 android:text="TextView"/>
+
+            <!--<TextView-->
+                <!--android:id="@+id/tvDeskripsi_kegiatan"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginLeft="20dp"-->
+                <!--android:layout_marginBottom="10dp"-->
+                <!--android:gravity="center"-->
+                <!--android:textSize="16dp"-->
+                <!--android:textStyle="bold"-->
+                <!--android:text="TextView"/>-->
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/btn_update_dokumentasi"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_weight="1"
+                    android:text="Edit"
+                    android:textSize="12sp" />
+                <Button
+                    android:id="@+id/btn_delete_dokumetasi"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_weight="1"
+                    android:text="Hapus"
+                    android:textSize="12sp" />
+            </LinearLayout>
         </LinearLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
