--- a/app/src/main/res/layout/item_tema_portofolio_read.xml
+++ b/app/src/main/res/layout/item_tema_portofolio_read.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    app:cardCornerRadius="5dp"
+    android:elevation="10dp">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp">
+
+        <TextView
+            android:id="@+id/id_tema_read"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -17,8 +27,8 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imgTema"
-                android:layout_width="275dp"
+                android:id="@+id/imgTema_read"
+                android:layout_width="180dp"
                 android:layout_height="90dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
@@ -28,7 +38,7 @@
                 app:srcCompat="@drawable/tema1" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="230dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
@@ -36,10 +46,10 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/tvTema"
+                    android:id="@+id/tvTema_read"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="15dp"
                     android:layout_marginBottom="5dp"
                     android:textColor="#000000"
                     android:text="TextView"
@@ -53,15 +63,8 @@
                     android:textColor="#000000"
                     android:textSize="14dp"
                     android:text="TextView" />
-                    <Button
-                        android:id="@+id/btn_set_data"
-                        style="@style/Widget.AppCompat.Button.Colored"
-                        android:layout_width="140dp"
-                        android:layout_height="10dp"
-                        android:layout_weight="1"
-                        android:text="Tampilkan Data"
-                        android:textSize="12sp" />
+
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+</androidx.cardview.widget.CardView>
