--- a/app/src/main/res/layout/title_identitas_keluarga.xml
+++ b/app/src/main/res/layout/title_identitas_keluarga.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Profil Identitas Keluarga"
-        android:drawableLeft="@drawable/ic_recent_actors_black_242dp"
+        android:drawableLeft="@drawable/ic_recent_actors_black_24dp"
+        android:layout_marginTop="55dp"
         android:drawablePadding="10dp"
         android:padding="12dp"
         android:gravity="fill_vertical"
