--- a/app/src/main/res/layout/title_jurnal_kegiatan.xml
+++ b/app/src/main/res/layout/title_jurnal_kegiatan.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Jurnal Kegiatan"
-        android:drawableLeft="@drawable/ic_book_black2_24dp"
+        android:drawableLeft="@drawable/ic_book_black_24dp"
+        android:layout_marginTop="55dp"
         android:drawablePadding="10dp"
         android:padding="12dp"
         android:gravity="fill_vertical"
