--- a/app/src/main/res/layout/title_story_telling.xml
+++ b/app/src/main/res/layout/title_story_telling.xml
@@ -7,12 +7,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Agenda Kegiatan"
         android:layout_marginTop="55dp"
-        android:drawableLeft="@drawable/ic_event_note_black_24dp"
-        android:drawablePadding="10dp"
+        android:text="Story Telling"
         android:padding="12dp"
-        android:gravity="fill_vertical"
+        android:gravity="center"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="@color/colorTitle"
