--- a/app/src/main/res/layout/title_tema_portofolio.xml
+++ b/app/src/main/res/layout/title_tema_portofolio.xml
@@ -7,8 +7,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="55dp"
         android:text="Portofolio berbasis Talent Mapping"
-        android:drawableLeft="@drawable/ic_import_contacts_black2_24dp"
+        android:drawableLeft="@drawable/ic_import_contacts_black_24dp"
         android:padding="12dp"
         android:gravity="center"
         android:textSize="20sp"
